flask_bugs/faulty_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faulty-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: faulty-app
  template:
    metadata:
      labels:
        app: faulty-app
    spec:
      containers:
      - name: faulty-app
        image: flask-app:latest
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
