flask_bugs/faulty_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faulty-service
spec:
  selector:
    app: faulty-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
